# serializer version: 1
# name: TestQueryBuilder.test_return_available_fields
  list([
    'bbox',
    'chunk_geometric_factor',
    'chunk_reference_coordinate',
    'chunk_type',
    'chunking_length',
    'coordinate_id',
    'coordinate_unit',
    'coordinates',
    'dataset_id',
    'dataset_name',
    'datasets',
    'description',
    'digital_object_identifier',
    'keywords',
    'label',
    'maximum_value',
    'minimum_value',
    'name',
    'parts',
    'processing_level',
    'product_id',
    'production_center',
    'products',
    'released_date',
    'retired_date',
    'service_format',
    'service_name',
    'service_short_name',
    'services',
    'short_name',
    'sources',
    'standard_name',
    'step',
    'thumbnail_url',
    'title',
    'units',
    'uri',
    'values',
    'variables',
    'versions',
  ])
# ---
# name: TestQueryBuilder.test_return_available_fields.1
  list([
    'etag',
    'file_format',
    'file_path',
    'file_size',
    'file_status',
    'filename',
    'files',
    'files_deleted',
    'files_not_found',
    'https_url',
    'last_modified_datetime',
    'message',
    'output_directory',
    's3_url',
    'status',
    'total_size',
  ])
# ---
# name: TestQueryBuilder.test_return_available_fields.2
  list([
    'coordinate_id',
    'coordinates_extent',
    'data_transfer_size',
    'file_path',
    'file_size',
    'file_status',
    'filename',
    'maximum',
    'message',
    'minimum',
    'output_directory',
    'status',
    'unit',
    'variables',
  ])
# ---
